// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiRange allows value prop to accept a number 1`] = `
<div
  class="euiRangeWrapper euiRange"
>
  <div
    aria-hidden="false"
    class="euiRangeTrack"
  >
    <input
      aria-hidden="false"
      class="euiRangeSlider"
      id="generated-id"
      max="100"
      min="0"
      step="1"
      type="range"
      value="8"
    />
    <div
      class="euiRangeTooltip"
    >
      <output
        class="euiRangeTooltip__value euiRangeTooltip__value--right"
        style="left:8%"
      >
        8
      </output>
    </div>
  </div>
</div>
`;

exports[`EuiRange allows value prop to accept empty string 1`] = `
<div
  class="euiRangeWrapper euiRange"
>
  <div
    aria-hidden="false"
    class="euiRangeTrack"
  >
    <input
      aria-hidden="false"
      class="euiRangeSlider"
      id="generated-id"
      max="100"
      min="0"
      step="1"
      type="range"
      value=""
    />
  </div>
</div>
`;

exports[`EuiRange is rendered 1`] = `
<div
  class="euiRangeWrapper euiRange testClass1 testClass2"
>
  <div
    aria-hidden="false"
    class="euiRangeTrack"
  >
    <input
      aria-hidden="false"
      aria-label="aria-label"
      class="euiRangeSlider"
      data-test-subj="test subject string"
      id="id"
      max="100"
      min="0"
      name="name"
      step="1"
      type="range"
      value="8"
    />
  </div>
</div>
`;

exports[`EuiRange props compressed should render 1`] = `
<div
  class="euiRangeWrapper euiRangeWrapper--compressed euiRange"
>
  <div
    aria-hidden="false"
    class="euiRangeTrack"
  >
    <input
      aria-hidden="false"
      class="euiRangeSlider euiRangeSlider--compressed"
      id="generated-id"
      max="100"
      min="0"
      step="1"
      type="range"
      value="8"
    />
  </div>
</div>
`;

exports[`EuiRange props custom ticks should render 1`] = `
<div
  class="euiRangeWrapper euiRange"
>
  <div
    aria-hidden="false"
    class="euiRangeTrack euiRangeTrack--hasTicks"
  >
    <div
      class="euiRangeTicks"
    >
      <button
        class="euiRangeTick euiRangeTick--isCustom"
        style="left:20%"
        tabindex="-1"
        title="20kb"
        type="button"
        value="20"
      >
        <span
          class="euiRangeTick__label"
        >
          20kb
        </span>
      </button>
      <button
        class="euiRangeTick euiRangeTick--isCustom euiRangeTick--isMax"
        style="left:100%"
        tabindex="-1"
        title="100kb"
        type="button"
        value="100"
      >
        <span
          class="euiRangeTick__label"
          style="margin-right:-1.25em"
        >
          100kb
        </span>
      </button>
    </div>
    <input
      aria-hidden="false"
      class="euiRangeSlider euiRangeSlider--hasTicks"
      id="generated-id"
      max="100"
      min="0"
      step="1"
      type="range"
      value="8"
    />
  </div>
</div>
`;

exports[`EuiRange props disabled should render 1`] = `
<div
  class="euiRangeWrapper euiRange"
>
  <div
    aria-hidden="false"
    class="euiRangeTrack euiRangeTrack--disabled"
  >
    <input
      aria-hidden="false"
      class="euiRangeSlider"
      disabled=""
      id="generated-id"
      max="100"
      min="0"
      step="1"
      type="range"
      value="8"
    />
  </div>
</div>
`;

exports[`EuiRange props fullWidth should render 1`] = `
<div
  class="euiRangeWrapper euiRangeWrapper--fullWidth euiRange"
>
  <div
    aria-hidden="false"
    class="euiRangeTrack"
  >
    <input
      aria-hidden="false"
      class="euiRangeSlider"
      id="generated-id"
      max="100"
      min="0"
      step="1"
      type="range"
      value="8"
    />
  </div>
</div>
`;

exports[`EuiRange props input should render 1`] = `
<div
  class="euiRangeWrapper euiRange testClass1 testClass2"
>
  <div
    aria-hidden="true"
    class="euiRangeTrack"
  >
    <input
      aria-hidden="true"
      aria-label="aria-label"
      class="euiRangeSlider"
      data-test-subj="test subject string"
      max="100"
      min="0"
      name="name"
      step="1"
      tabindex="-1"
      type="range"
      value="8"
    />
  </div>
  <div
    class="euiRange__horizontalSpacer"
  />
  <div
    class="euiFormControlLayout"
  >
    <div
      class="euiFormControlLayout__childrenWrapper"
    >
      <input
        aria-label="aria-label"
        class="euiFieldNumber euiRangeInput euiRangeInput--max"
        data-test-subj="test subject string"
        id="id"
        max="100"
        min="0"
        name="name"
        step="1"
        style="width:4.4em"
        type="number"
        value="8"
      />
    </div>
  </div>
</div>
`;

exports[`EuiRange props labels should render 1`] = `
<div
  class="euiRangeWrapper euiRange"
>
  <label
    class="euiRangeLabel euiRangeLabel--min"
  >
    0
  </label>
  <div
    aria-hidden="false"
    class="euiRangeTrack"
  >
    <input
      aria-hidden="false"
      class="euiRangeSlider"
      id="generated-id"
      max="100"
      min="0"
      step="1"
      type="range"
      value="8"
    />
  </div>
  <label
    class="euiRangeLabel euiRangeLabel--max"
  >
    100
  </label>
</div>
`;

exports[`EuiRange props levels should render 1`] = `
<div
  class="euiRangeWrapper euiRange"
>
  <div
    aria-hidden="false"
    class="euiRangeTrack"
  >
    <div
      class="euiRangeLevels"
    >
      <span
        class="euiRangeLevel euiRangeLevel--danger"
        style="width:20%"
      />
      <span
        class="euiRangeLevel euiRangeLevel--success"
        style="width:80%"
      />
    </div>
    <input
      aria-hidden="false"
      class="euiRangeSlider"
      id="generated-id"
      max="100"
      min="0"
      step="1"
      type="range"
      value="20"
    />
  </div>
</div>
`;

exports[`EuiRange props range should render 1`] = `
<div
  class="euiRangeWrapper euiRange"
>
  <div
    aria-hidden="false"
    class="euiRangeTrack"
  >
    <div
      class="euiRangeHighlight"
    >
      <div
        class="euiRangeHighlight__progress"
        style="margin-left:0%;width:8%"
      />
    </div>
    <input
      aria-hidden="false"
      class="euiRangeSlider euiRangeSlider--hasRange"
      id="generated-id"
      max="100"
      min="0"
      step="1"
      type="range"
      value="8"
    />
  </div>
</div>
`;

exports[`EuiRange props slider should display in popover 1`] = `
<div
  class="euiPopover euiPopover--anchorDownLeft euiPopover--displayBlock euiInputPopover euiRange__popover"
>
  <div
    class="euiPopover__anchor"
  >
    <div>
      <div
        class="euiFormControlLayout"
      >
        <div
          class="euiFormControlLayout__childrenWrapper"
        >
          <input
            aria-label="aria-label"
            class="euiFieldNumber euiRangeInput euiRangeInput--max"
            data-test-subj="test subject string"
            id="id"
            max="100"
            min="0"
            name="name"
            step="1"
            type="number"
            value="8"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiRange props ticks should render 1`] = `
<div
  class="euiRangeWrapper euiRange"
>
  <div
    aria-hidden="false"
    class="euiRangeTrack euiRangeTrack--hasTicks"
  >
    <div
      class="euiRangeTicks"
      style="margin:0 -8.333333333333332%;left:0;right:0"
    >
      <button
        class="euiRangeTick"
        style="width:16.666666666666664%"
        tabindex="-1"
        type="button"
        value="0"
      >
        <span
          class="euiRangeTick__label"
        >
          0
        </span>
      </button>
      <button
        class="euiRangeTick"
        style="width:16.666666666666664%"
        tabindex="-1"
        type="button"
        value="20"
      >
        <span
          class="euiRangeTick__label"
        >
          20
        </span>
      </button>
      <button
        class="euiRangeTick"
        style="width:16.666666666666664%"
        tabindex="-1"
        type="button"
        value="40"
      >
        <span
          class="euiRangeTick__label"
        >
          40
        </span>
      </button>
      <button
        class="euiRangeTick"
        style="width:16.666666666666664%"
        tabindex="-1"
        type="button"
        value="60"
      >
        <span
          class="euiRangeTick__label"
        >
          60
        </span>
      </button>
      <button
        class="euiRangeTick"
        style="width:16.666666666666664%"
        tabindex="-1"
        type="button"
        value="80"
      >
        <span
          class="euiRangeTick__label"
        >
          80
        </span>
      </button>
      <button
        class="euiRangeTick"
        style="width:16.666666666666664%"
        tabindex="-1"
        type="button"
        value="100"
      >
        <span
          class="euiRangeTick__label"
        >
          100
        </span>
      </button>
    </div>
    <input
      aria-hidden="false"
      class="euiRangeSlider euiRangeSlider--hasTicks"
      id="generated-id"
      max="100"
      min="0"
      step="1"
      type="range"
      value="8"
    />
  </div>
</div>
`;

exports[`EuiRange props value should render 1`] = `
<div
  class="euiRangeWrapper euiRange"
>
  <div
    aria-hidden="false"
    class="euiRangeTrack"
  >
    <input
      aria-hidden="false"
      class="euiRangeSlider"
      id="generated-id"
      max="100"
      min="0"
      step="1"
      type="range"
      value="200"
    />
    <div
      class="euiRangeTooltip"
    >
      <output
        class="euiRangeTooltip__value euiRangeTooltip__value--left"
        style="right:0%"
      >
        before200after
      </output>
    </div>
  </div>
</div>
`;
